# serial2websocket

./: .gitignore  pyproject.toml
src/serial2websocket/: main.py
tests/: mocks.py  test_serial.py  test_server.py  test_websocket.py
